--- a/css/salsifis.css
+++ b/css/salsifis.css
@@ -5,3 +5,21 @@
 .progress{
 	height: 12px;
 }
+.torrents{
+	margin-bottom: 0;
+	margin-top: 0;
+	padding-top: 0.3em;
+	padding-bottom: 0.3em;
+}
+ .torrents h3{
+ 	margin-top: 0.3em;
+	margin-bottom: 0.4em;
+ }
+.progress-torrents{
+	margin-bottom: 0;
+	margin-top: 0;
+}
+
+.progress-bar-default {
+	background-color: #000;
+}
